Update Services in clientZone. Menu in AdminZone and Panel with Services has been created

--- a/AutoService/App.xaml
+++ b/AutoService/App.xaml
@@ -15,5 +15,14 @@
             <Setter Property="Background" Value="#FFFF9C1A"/>
             <Setter Property="FontWeight" Value="DemiBold"/>
         </Style>
+        <Style TargetType="Button" x:Key="ButtonMain">
+            <Setter Property="FontFamily" Value="Tw Cen Mt"/>
+            <Setter Property="FontSize" Value="15pt"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Height" Value=" 50"/>
+            <Setter Property="Width" Value="400"/>
+            <Setter Property="Background" Value="#FFFF9C1A"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+        </Style>
     </Application.Resources>
 </Application>
