--- a/AutoService/AdminZone/AdminWindow.xaml
+++ b/AutoService/AdminZone/AdminWindow.xaml
@@ -5,8 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoService.AdminZone"
         mc:Ignorable="d"
-        Title="Окно администратора" Height="450" Width="800">
-    <Grid Background="#FFE60000">
-        
+        Title="Окно администратора" Height="560" MinHeight="620" Width="800" MinWidth="880">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="68*"/>
+            <RowDefinition Height="351*"/>
+        </Grid.RowDefinitions>
+        <!--Разметка шапки проекта-->
+        <Grid Background="#FFFFFFE1"
+                >
+            <StackPanel Background="#FFFFFFE1"
+                  Orientation="Horizontal"
+                  HorizontalAlignment="Left">
+                <Image Source="../Resorces/service_logo.png"/>
+                <TextBlock
+          Background="#FFFFFFE1"
+            VerticalAlignment="Center"
+            FontSize="18pt"
+            Text="{Binding ElementName=FrmMain, Path=Content.Title}"
+            FontFamily="Tw Cen MT"
+            FontWeight="Bold"
+                />
+            </StackPanel>
+        </Grid>
+        <!--Разметка основной части-->
+        <Frame
+        NavigationUIVisibility="Hidden"
+        Name="FrmMain"
+        Grid.Row="1"
+        Grid.Column="0"/>
     </Grid>
 </Window>
